discussion/kv_engine/161699/161699_rev24_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48531: Shard the Checkpoint Remover Task

The new 'checkpoint_removers' param in configuration defines the number
of concurrent tasks.

Each task is assigned a Task::removerId in [0, num_removers - 1]. Each
task is then responsible for touching only vbuckets that verify
(vbid % numRemovers == removerId).

Change-Id: I3b36d1ea264c37f9a8933bfd0523d796a18a4807

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-10-13 10:13:08.000000000
Message: 
Uploaded patch set 24.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-13 10:16:49.000000000
Message: 
Patch Set 24: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34953/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34953/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41116/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41116/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23377/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15345/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15345/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13461/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:451:40: error: no member named "getNumCheckpointRemovers" in "Configuration"; did you mean "getCheckpointRemovers"? [clang-diagnostic-error]
    const auto numChkRemovers = config.getNumCheckpointRemovers();
                                       ^~~~~~~~~~~~~~~~~~~~~~~~
                                       getCheckpointRemovers
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/generated_configuration.h:51:12: note: "getCheckpointRemovers" declared here
    size_t getCheckpointRemovers() const;
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_remover_test.cc:59:35: error: no member named "getNumCheckpointRemovers" in "Configuration"; did you mean "getCheckpointRemovers"? [clang-diagnostic-error]
    ASSERT_EQ(numRemovers, config.getNumCheckpointRemovers());
                                  ^~~~~~~~~~~~~~~~~~~~~~~~
                                  getCheckpointRemovers
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2073:54: note: expanded from macro "ASSERT_EQ"
# define ASSERT_EQ(val1, val2) GTEST_ASSERT_EQ(val1, val2)
                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2057:69: note: expanded from macro "GTEST_ASSERT_EQ"
  ASSERT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:168:40: note: expanded from macro "ASSERT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_FATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/generated_configuration.h:51:12: note: "getCheckpointRemovers" declared here
    size_t getCheckpointRemovers() const;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13461/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:451:40:
error: no member named "getNumCheckpointRemovers" in "Configuration"; did you mean "getCheckpointRemovers"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13461/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15975/ : FAILURE

Compile error at [2021-10-13T10:14:52.572Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kv_bucket.cc:451:40:
error: no member named "getNumCheckpointRemovers" in "Configuration"; did you mean "getCheckpointRemovers"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15975/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3159/ : FAILURE

Compile error at [2021-10-13T10:15:26.695Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/kv_bucket.cc:451:40:
error: ?class Configuration? has no member named ?getNumCheckpointRemovers?; did you mean ?getCheckpointRemovers??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3159/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14225/ : FAILURE

Compile error at [2021-10-13T10:15:52.304Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kv_bucket.cc:451:40:
error: no member named "getNumCheckpointRemovers" in "Configuration"; did you mean "getCheckpointRemovers"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14225/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3094/ : FAILURE

Compile error at [2021-10-13T10:14:58.293Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kv_bucket.cc:451:40:
error: no member named "getNumCheckpointRemovers" in "Configuration"; did you mean "getCheckpointRemovers"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3094/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15071/ : FAILURE

Compile error at [2021-10-13T10:14:54.661Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:451:40:
error: ?class Configuration? has no member named ?getNumCheckpointRemovers?; did you mean ?getCheckpointRemovers??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15071/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12248/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
